:bug: text visible again

--- a/styles/components/_sidenav.scss
+++ b/styles/components/_sidenav.scss
@@ -21,6 +21,12 @@
         .logo img {
             width: 5rem;
         }
+
+        a .link-text {
+            display: inline;
+            transition: opacity 0.3s;
+            opacity: 1;
+        }
     }
 
     .logo {
